[gd_scene load_steps=6 format=2]

[ext_resource path="res://ui/buttons/buy_button.gd" type="Script" id=1]
[ext_resource path="res://ui/theme.theme" type="Theme" id=2]
[ext_resource path="res://sfx/ui/sfx_coin_double5.wav" type="AudioStream" id=3]
[ext_resource path="res://ui/fonts/default_font.tres" type="DynamicFont" id=4]
[ext_resource path="res://sfx/ui/sfx_coin_single2.wav" type="AudioStream" id=5]

[node name="BuyButton" type="PanelContainer"]
margin_right = 39.0
margin_bottom = 42.0
size_flags_horizontal = 3
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="Menu" type="VBoxContainer" parent="."]
margin_left = 2.0
margin_top = 2.0
margin_right = 84.0
margin_bottom = 54.0
rect_min_size = Vector2( 0, 32 )
size_flags_horizontal = 3

[node name="Icon" type="TextureRect" parent="Menu"]
margin_right = 82.0
size_flags_vertical = 3
stretch_mode = 4

[node name="PriceLabel" type="Label" parent="Menu"]
margin_top = 4.0
margin_right = 82.0
margin_bottom = 24.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 4 )
text = "$######"
align = 1

[node name="ActivateButton" type="Button" parent="Menu"]
modulate = Color( 0, 0.890196, 0.211765, 1 )
margin_top = 28.0
margin_right = 82.0
margin_bottom = 52.0
text = "Buy"

[node name="BuySound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
bus = "SFX"

[node name="RefundSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
bus = "SFX"

[connection signal="pressed" from="Menu/ActivateButton" to="." method="_on_ActivateButton_pressed"]
